--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tauri-release-demo-app"
+name = "TauriReleaseDemoApp"
 version = "0.0.1"
 description = "A Tauri App"
 authors = ["you"]
