--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,8 @@ env:
 jobs:
   release:
     if: contains(github.event.head_commit.message, 'release')
+    permissions:
+      contents: write
     strategy:
       fail-fast: false
       matrix:
