--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,23 @@ jobs:
           tagName: demoapp-v__VERSION__
           releaseName: "Tauri Release Demo App v__VERSION__"
           releaseBody: "See the assets to download and install this version."
-          releaseDraft: true
-          prerelease: false
           args: ${{ matrix.target && format('--target {0}', matrix.target) }}
+
+  update_json:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set Node.js Env
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Update file
+        working-directory: ./
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIST_ID: ${{ secrets.GIST_ID }}
+        run: |
+          - name: Run updater script
+            run: node ./scripts/updater.mjs ${{ needs.release.outputs.releaseId }}
