--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,13 @@ jobs:
           node-version: 18
           cache: "yarn"
 
+      - name: Cache Node Modules
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+
       - name: Install frontend dependencies
         run: yarn install
 
@@ -65,10 +72,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Cache Node Modules
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+
       - name: Set Node.js Env
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: "yarn"
 
       - name: Update JSON updater file
         working-directory: ./
