--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,35 +70,6 @@ jobs:
       - name: Update JSON updater file
         working-directory: ./
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID }}
         run: node ./scripts/updater.mjs ${{ steps.tauri_build.outputs.releaseId }}
-
-  # update_json:
-  #   runs-on: macos-latest
-  #   needs: release
-  #   steps:
-  #     - uses: actions/checkout@v3
-
-  #     - name: Cache Node Modules
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: |
-  #           **/node_modules
-  #         key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
-
-  #     - name: Set Node.js Env
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 18
-  #         cache: "yarn"
-
-  #     - name: Log Release ID
-  #       run: echo "Release ID = ${{ needs.release.outputs.releaseId }}"
-
-  #     - name: Update JSON updater file
-  #       working-directory: ./
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         GIST_ID: ${{ secrets.GIST_ID }}
-  #       run: node ./scripts/updater.mjs ${{ needs.release.outputs.releaseId }}
